--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>پورتفولیو | امین‌رضا ترکی</title>
+    <meta name="description" content="پورتفولیو شخصی امین‌رضا ترکی">
     
     <!-- Preload the background image for faster loading -->
     <link rel="preload" as="image" href="https://i.ibb.co/kgFhBL4V/gradient-background-web-optimized.jpg">
@@ -133,7 +134,9 @@
                 <h2>
                     درحال یادگیری، ایده‌پردازی، و ترسیم تراوشات ذهنی...!
                 </h2>
-                <h2></h2>
+                <h2>
+                    ‌‌‌
+                </h2>
                 
                 <!-- Hero Navigation Buttons -->
                 <nav id="hero-nav" class="flex flex-wrap justify-center gap-3 md:gap-4">
