--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
                             <li>تسلط مقدماتی بر طراحی رابط‌کاربری</li>
                             <li>تجربه طراحی و اجرای کتیبه و دیوارنویسی</li>
                             <li>تجربه طراحی در نماهنگ تلوزیونی "کاکوی امام رضا (ع)"</li>
+                            <li>تجربه تدریس درس هنر متوسطه اول"</li>
                             <li>توانمندی تولید تصاویر هنری و رئال با استفاده از مدل‌های هوش‌مصنوعی</li>
                         </ul></div>
                         <div><h3 class="text-lg font-bold text-[#A2D5C6] mb-4 border-b border-[#A2D5C6]/20 pb-2">تدوین</h3><ul class="list-disc list-inside space-y-2 text-[#F6F6F6]/90">
